--- a/public/controller.html
+++ b/public/controller.html
@@ -77,6 +77,7 @@
                 <select id="i-driver">
                     <option value="native">Native</option>
                     <option value="simple-server">Simple Server</option>
+                    <option value="lobe-tts">Lobe TTS</option>
                 </select>
             </div>
         </div>
