✨ Allow selecting LobeTTS Edge voices
*   `public/controller.html`: Separated voice lists into "Native Voices" and "LobeTTS Edge Voices" for clearer distinction.
*   `src/controller.ts`:
    *   Implemented logic to list and bind user selection for Edge voices.
    *   Prevented `previewReadAloud` from triggering on initial page load when binding the `speakerId` to avoid unexpected audio.
*   `src/read_aloud/lobe_tts_read_aloud.ts`:
    *   Defined a curated list of common Edge TTS voices.
    *   Modified `readSequentially` to use the user-selected voice for speech synthesis.
*   `src/store.ts`: Introduced `lobeTtsEdgeVoiceStore` to persist the chosen Edge voice across sessions.

This enhancement provides users with greater customizability for the LobeTTS read-aloud feature.

--- a/public/controller.html
+++ b/public/controller.html
@@ -64,10 +64,17 @@
             </div>
 
             <div class="container">
-                <h3>Voices</h3>
+                <h3>Native Voices</h3>
                 <div class="gap"></div>
 
-                <div id="list-voices"></div>
+                <div id="list-native-voices"></div>
+            </div>
+
+            <div class="container">
+                <h3>LobeTTS Edge Voices</h3>
+                <div class="gap"></div>
+
+                <div id="list-lobe-tts-edge-voices"></div>
             </div>
 
             <div class="container">
